# Symulator_kolejki_zadan

./: CMakeCache.txt  CMakeLists.txt  InputProtect.cpp  InputProtect.hpp  Makefile  MyExecutable  README.md  cmake_install.cmake  kolejka_szablon.hpp  komunikaty.cpp  komunikaty.hpp  main.cpp  symulacja.cpp  symulacja.hpp  zadania.cpp  zadania.hpp
